feat: Upgrade to Java 21 and Gradle 9.3.1